k8s/base/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-py-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-py
  template:
    metadata:
      labels:
        app: opentelemetry-py
    spec:
      containers:
      - name: flask-app
        image: opentelemetry-py:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
